--- a/springboot-backend/src/main/resources/application.yml
+++ b/springboot-backend/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     username: root
     password: root1234
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
